feat: Refactored database model for checkers, fixed bugs
